--- a/httpdocs/css/style.css
+++ b/httpdocs/css/style.css
@@ -1,4 +1,4 @@
-/* Copyright 1999-2014. Parallels IP Holdings GmbH. All Rights Reserved. */
+/* Copyright 1999-2014.  IP Holdings GmbH. All Rights Reserved. */
 html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 html, body { border: 0; margin: 0; height: 100%; min-height: 100%; }
 body { color: #1e1e1e; font: 13px/1.231 arial, helvetica, sans-serif; background: #f5f5f5; }
